base de seccion persona e inicio listas

--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -72,47 +72,36 @@
             <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
         </div>
 
-
+   
     </header>
 
 
     <main>
         <!--TERCER PARTE-->
-        <section class="cuerpo">
-            <div class="tituloeimagen">
-                <h1>Usuario, claves<br>y Token Galicia</h1>
-                  <p>Aprendé a configurarlos. Conocé cómo<br> recuperarlos si los olvidaste o bloqueaste.</p>
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Hero-claves-2.jpg" alt="mano en celular"/>    
-        </div>
+        <section class="contenedorayuda">
 
-    <h2>Cómo crear tu Usuario y Clave</h2>
-    <div class="card">
-      <p>1. Descargá o abrí la App Galicia.</p>
-      <p>2. Tocá "Ingresar" o "Ya soy Galicia" > Obtener Usuario y Clave Galicia.</p>
-      <p>3. Escribí tu DNI y sacate una foto para verificar tu identidad.</p>
-      <p>4. Ingresá tu celu y validalo con el código que vas a recibir por SMS.</p>
-      <p>5. Creá tu Usuario y Clave Galicia.</p>
-      <p>6. Cargá tu mail, revisá tu bandeja de entrada, confirmalo y ¡listo!</p>
-      <p>👉 Al momento de crearlos, evitá usar números iguales, consecutivos o caracteres especiales.</p>
-    </div>
+        <h1>Encontrá la respuesta a tus dudas</h1>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              </form>
+            </div>
+          </nav>
+    
+       <h2>Temas más consultados</h2> 
+       <p>
+        Tarjetas<br>
+        Seguros<br>
+        Cuentas<br>
+        Claves<br>
+        Préstamos<br>
+        Cajeros y terminales<br>
+        Inversiones
+       </p>
 
-    <h2>Cómo activar el Token Galicia</h2>
-  <div class="card">
-      <p>1. Ingresá a: App Galicia > Más > Claves > Token Galicia > Activar.</p>
-      <p>2. Seguí los pasos de validación.</p>
-      <p>¡Listo! Ya tenés tu Token Galicia activo.</p>
-    </div>
-</section>
-
-<div class="ayuda">
-    <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Icono-mensaje.png" alt="chat" />
-    <h3>¿Necesitas ayuda?</h3>
-    <p>Respondemos tus dudas</p>
-</div>
-
-
-
-    </main>
+    </section>
+        </main>
 
     <footer>
      
