--- a/html/cuentas.html
+++ b/html/cuentas.html
@@ -61,7 +61,7 @@
             <li><a class="dropdown-item" href="#">Cuentas</a></li>
           </ul>
 
-          <button class="boton3" aria-expanded="false">
+          <button class="boton3" onclick= "window.location.href='../ayuda.html';" aria-expanded="false">
             Ayuda
           </button>
       </nav>
@@ -72,43 +72,13 @@
             <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
         </div>
 
-      <div class="menuheader">
-        <div class="navbar">
-          <div class="container-fluid d-flex justify-content-end">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-              <div class="offcanvas-header">
-  
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-  
-              <div>
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href=".servicios">Servicios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Sobre</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+ 
     </header>
 
 
     <main>
           <!--TERCER PARTE-->
-          <section class="cuerpo">
+<section class="cuerpo">
             <div class="tituloeimagen">
                 <h1>Abrir tu cuenta Galicia<br>tiene beneficios</h1>
                 <p>Y disfrutá 6 meses gratis y promos para ahorrar 😉</p>
@@ -116,12 +86,61 @@
         </div>
 
         <h2>Encontrá la cuenta ideal para vos</h2>
-        <div class="tarjetas">
+
+<div class="contenedorcard">
           <div class="card">
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-move.jpg" alt="persona con auriculares" class="imgtarjeta"/>    
-             <h2>Move</h2>
-             <a class="boton2" href="#">Abrir Cuenta</a>
+            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-move.jpg"  alt="persona con auriculares">
+            <div class="card-body">
+              <p class="card-title">Move</p>
+              <p>Tarjeta de Débito.<br>
+              Caja de Ahorro.<br>
+              Caja de Ahorro en dólares.<br>
+              App personalizada.</p>
+              <a href="#" class="boton2">Abrir Cuenta</a>
+            </div>
           </div>
+
+          <div class="card">
+            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-classic.jpg"  alt="mujer leyendo">
+            <div class="card-body">
+              <p class="card-title">Classic</p>
+              <p>2 tarjetas de crédito internacionales.<br>
+                Tarjeta de Débito.<br>
+                Caja de Ahorro.<br>
+                Caja de Ahorro en dólares opcional.<br>
+                Cuenta Corriente opcional.</p>
+              <a href="#" class="boton2">Abrir Cuenta</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-prefer.jpg"  alt="mujer con celular">
+            <div class="card-body">
+              <p class="card-title">Prefer</p>
+              <p>2 tarjetas de crédito gold.<br>
+                Tarjeta de Débito.<br>
+                Caja de Ahorro.<br>
+                Caja de Ahorro en dólares opcional.<br>
+                Cuenta Corriente opcional.</p>
+              <a href="#" class="boton2">Abrir Cuenta</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-eminent.jpg"  alt="hombre con neetbook">
+            <div class="card-body">
+              <p class="card-title">Éminent</p>
+              <p>2 tarjetas de crédito. Pueden ser black o platinum según tus ingresos.<br>
+                Tarjeta de Débito.<br>
+                Caja de Ahorro.<br>
+                Caja de Ahorro en dólares opcional.<br>
+                Cuenta Corriente opcional.<br>
+                Atención personalizada.<br>
+                Asistencia en viajes y servicios preferenciales.</p>
+              <a href="#" class="boton2">Abrir Cuenta</a>
+            </div>
+          </div>
+</div>
 </section>
 
 <div class="ayuda">
