--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </ul>
 
  
-          <button class="boton3" aria-expanded="false">
+          <button class="boton3" onclick= "window.location.href='../ayuda.html';" aria-expanded="false">
             Ayuda
           </button>
 
@@ -76,37 +76,7 @@
         <div class="buscador">
             <a href="https://www.google.com/?hl=es" target="_blank"><img src="img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
         </div>
-      <div class="menuheader">
-        <div class="navbar">
-          <div class="container-fluid d-flex justify-content-end">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-              <div class="offcanvas-header">
-  
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-  
-              <div>
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href=".servicios">Servicios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Sobre</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+     
     </header>
 
 
