--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -21,7 +21,7 @@
     <meta name="geo.placename" content="Cordoba">
 
     <!--favicon--> 
-    <!-- <link rel="shortcut icon" href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg" type="image/x-icon">
 
 
     <!--LINK DE BOOTRSTRAP -->
@@ -61,7 +61,7 @@
             <li><a class="dropdown-item" href="cuentas.html">Cuentas</a></li>
           </ul>
 
-          <button class="boton3" onclick= "window.location.href='../ayuda.html';" aria-expanded="false">
+          <button class="boton3" onclick= "window.location.href='ayuda.html';" aria-expanded="false">
             Ayuda
           </button>
       </nav>
@@ -84,23 +84,140 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
               <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Buscá por palabra clave o tema. " aria-label="Search">
               </form>
             </div>
           </nav>
-    
-       <h2>Temas más consultados</h2> 
-       <p>
-        Tarjetas<br>
-        Seguros<br>
-        Cuentas<br>
-        Claves<br>
-        Préstamos<br>
-        Cajeros y terminales<br>
-        Inversiones
-       </p>
+        </section>
 
-    </section>
+    <div class="temasconsultados">
+       <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/tarjeta.png" class="iconosayuda" alt="icono de tarjeta">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Tarjetas</h5>
+              <p class="card-text">Resumen, reposición, pagos...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/cuentas.png" class="iconosayuda" alt="cuentas">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Cuentas</h5>
+              <p class="card-text">Saldos, CBU, cheques...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/claves.png" class="iconosayuda" alt="llaves">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Claves</h5>
+              <p class="card-text">Token Galicia, PIN Banelco...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/candado.png" class="iconosayuda" alt="candado">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Seguros</h5>
+              <p class="card-text">Altas, siniestros...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/prestamos1.png" class="iconosayuda" alt="Dinero">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Prestamos</h5>
+              <p class="card-text">Personal, express...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/inversiones.png" class="iconosayuda" alt="chanchito">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Inversiones</h5>
+              <p class="card-text">Plazo fijo, FIMA...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/pagodeservicio.png" class="iconosayuda" alt="mano con dinero">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Pago de servicios</h5>
+              <p class="card-text">Pagos AFIP, servicios...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/cajero.png" class="iconosayuda" alt="dinero">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Cajeros y terminales</h5>
+              <p class="card-text">Extracciones,depósitos...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../img/envioyingrreso.png" class="iconosayuda" alt="flechas ida y vuelta">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Envío e ingreso de dinero</h5>
+              <p class="card-text">transferencias...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      </div>
         </main>
 
     <footer>
