--- a/html/clavesytoken.html
+++ b/html/clavesytoken.html
@@ -21,7 +21,7 @@
     <meta name="geo.placename" content="Cordoba">
 
     <!--favicon--> 
-    <!-- <link rel="shortcut icon" href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg" type="image/x-icon">
 
 
     <!--LINK DE BOOTRSTRAP -->
@@ -61,7 +61,7 @@
             <li><a class="dropdown-item" href="cuentas.html">Cuentas</a></li>
           </ul>
 
-          <button class="boton3" onclick= "window.location.href='../ayuda.html';" aria-expanded="false">
+          <button class="boton3" onclick= "window.location.href='ayuda.html';" aria-expanded="false">
             Ayuda
           </button>
       </nav>
