--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </ul>
 
  
-          <button class="boton3" onclick= "window.location.href='../ayuda.html';" aria-expanded="false">
+          <button class="boton3" onclick= "window.location.href='html/ayuda.html';" aria-expanded="false">
             Ayuda
           </button>
 
