--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!--primera parte-->
         <nav>
           
-          <button class="boton3"  onclick= "window.location.href='../index.html';"  aria-expanded="false">
+          <button class="boton3"  onclick= "window.location.href='#' "  aria-expanded="false">
             Inicio
           </button>
             
