--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Claves y token</title>
+    <title>ayuda</title>
 
     <!--SEO ON PAGE-->
-    <!-- <meta name="description" content="Disfrutá de tarjetas y cuentas con beneficios únicos. Pagá, invertí, pedí préstamos y ahorrá con nuestras promos. Hacemos tu día a día más fácil."> -->
+      <meta name="description" content="Encuentra respuestas a tus preguntas financieras en nuestra página de ayuda. ¡Estamos aquí para ayudarte!">
     <!--META KEYWORDS-->
-    <!-- <meta name="keywords" content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, dolar, dinero, tarjetas, cuentas"> -->
+    <meta name="keywords" content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, ayuda, dinero, tarjetas, cuentas">
     <!--META PHONE-->
     <meta name="telephone" content="+543510000000">
     <!--META WHATSAPP-->
