--- a/html/clavesytoken.html
+++ b/html/clavesytoken.html
@@ -8,9 +8,9 @@
     <title>Claves y token</title>
 
     <!--SEO ON PAGE-->
-    <!-- <meta name="description" content="Disfrutá de tarjetas y cuentas con beneficios únicos. Pagá, invertí, pedí préstamos y ahorrá con nuestras promos. Hacemos tu día a día más fácil."> -->
+    <meta name="description" content="Protege tus transacciones bancarias con nuestras claves y tokens de seguridad líderes en la industria.">
     <!--META KEYWORDS-->
-    <!-- <meta name="keywords" content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, dolar, dinero, tarjetas, cuentas"> -->
+    <meta name="keywords" content="Banco, dinero, claves, deposito, cajeros, contraseñas, cheques, dolar, dinero, token, cuentas">
     <!--META PHONE-->
     <meta name="telephone" content="+543510000000">
     <!--META WHATSAPP-->
