--- a/html/cuentas.html
+++ b/html/cuentas.html
@@ -8,9 +8,9 @@
     <title>Cuentas</title>
 
     <!--SEO ON PAGE-->
-    <!-- <meta name="description" content="Disfrutá de tarjetas y cuentas con beneficios únicos. Pagá, invertí, pedí préstamos y ahorrá con nuestras promos. Hacemos tu día a día más fácil."> -->
+    <meta name="description" content="Descubre nuestras cuentas bancarias adaptadas a ti: corrientes, ahorros e inversiones. Administra tu dinero de manera efectiva con nosotros.">
     <!--META KEYWORDS-->
-    <!-- <meta name="keywords" content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, dolar, dinero, tarjetas, cuentas"> -->
+    <meta name="keywords" content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, dolar, dinero, tarjetas, cuentas">
     <!--META PHONE-->
     <meta name="telephone" content="+543510000000">
     <!--META WHATSAPP-->
