--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Banco</title>
 
     <!--SEO ON PAGE-->
-    <meta name="description" content="Disfrutá de tarjetas y cuentas con beneficios únicos. Pagá, invertí, pedí préstamos y ahorrá con nuestras promos. Hacemos tu día a día más fácil.">
+    <meta name="description" content="Servicios financieros completos para tus necesidades. Cuentas, préstamos ,claves con nuestro Banco.">
     <!--META KEYWORDS-->
     <meta name="keywords" content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, dolar, dinero, tarjetas, cuentas">
     <!--META PHONE-->
