--- a/html/clavesytoken.html
+++ b/html/clavesytoken.html
@@ -8,9 +8,11 @@
     <title>Claves y token</title>
 
     <!--SEO ON PAGE-->
-    <meta name="description" content="Protege tus transacciones bancarias con nuestras claves y tokens de seguridad líderes en la industria.">
+    <meta name="description"
+        content="Protege tus transacciones bancarias con nuestras claves y tokens de seguridad líderes en la industria.">
     <!--META KEYWORDS-->
-    <meta name="keywords" content="Banco, dinero, claves, deposito, cajeros, contraseñas, cheques, dolar, dinero, token, cuentas">
+    <meta name="keywords"
+        content="Banco, dinero, claves, deposito, cajeros, contraseñas, cheques, dolar, dinero, token, cuentas">
     <!--META PHONE-->
     <meta name="telephone" content="+543510000000">
     <!--META WHATSAPP-->
@@ -20,8 +22,10 @@
     <!--META GEO-->
     <meta name="geo.placename" content="Cordoba">
 
-    <!--favicon--> 
-    <link rel="shortcut icon" href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg" type="image/x-icon">
+    <!--favicon-->
+    <link rel="shortcut icon"
+        href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg"
+        type="image/x-icon">
 
 
     <!--LINK DE BOOTRSTRAP -->
@@ -37,7 +41,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet" />
 
 </head>
 
@@ -48,91 +54,83 @@
 
         <!--primera parte-->
         <nav>
-
-            <button class="boton3" onclick= "window.location.href='../index.html';" aria-expanded="false">
-                Inicio
-              </button>
+            <button class="boton3" onclick="window.location.href='../index.html';" aria-expanded="false">
+                Inicio</button>
             <button class="boton3" data-bs-toggle="dropdown" aria-expanded="false">
-            Personas
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Crear claves y token</a></li>
-            <li><a class="dropdown-item" href="tarjetas.html">Tarjetas</a></li>
-            <li><a class="dropdown-item" href="cuentas.html">Cuentas</a></li>
-          </ul>
+                Personas</button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Crear claves y token</a></li>
+                <li><a class="dropdown-item" href="tarjetas.html">Tarjetas</a></li>
+                <li><a class="dropdown-item" href="cuentas.html">Cuentas</a></li>
+            </ul>
 
-          <button class="boton3" onclick= "window.location.href='ayuda.html';" aria-expanded="false">
-            Ayuda
-          </button>
-      </nav>
+            <button class="boton3" onclick="window.location.href='ayuda.html';" aria-expanded="false">
+                Ayuda</button>
+        </nav>
         <a class="boton1" href="#">Office Banking</a>
         <a class="boton2" href="#">Online Banking</a>
 
         <div class="buscador">
-            <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
+            <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa"
+                    class="lupa" /></a>
         </div>
-
-
     </header>
-
 
     <main>
         <!--TERCER PARTE-->
         <section class="cuerpo">
             <div class="tituloeimagen">
                 <h1>Usuario, claves<br>y Token Galicia</h1>
-                  <p>Aprendé a configurarlos. Conocé cómo<br> recuperarlos si los olvidaste o bloqueaste.</p>
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Hero-claves-2.jpg" alt="mano en celular"/>    
+                <p>Aprendé a configurarlos. Conocé cómo<br> recuperarlos si los olvidaste o bloqueaste.</p>
+                <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Hero-claves-2.jpg" alt="mano en celular" />
+            </div>
+
+            <h2>Cómo crear tu Usuario y Clave</h2>
+            <div class="card">
+                <p>1. Descargá o abrí la App Galicia.</p>
+                <p>2. Tocá "Ingresar" o "Ya soy Galicia" > Obtener Usuario y Clave Galicia.</p>
+                <p>3. Escribí tu DNI y sacate una foto para verificar tu identidad.</p>
+                <p>4. Ingresá tu celu y validalo con el código que vas a recibir por SMS.</p>
+                <p>5. Creá tu Usuario y Clave Galicia.</p>
+                <p>6. Cargá tu mail, revisá tu bandeja de entrada, confirmalo y ¡listo!</p>
+                <p>👉 Al momento de crearlos, evitá usar números iguales, consecutivos o caracteres especiales.</p>
+            </div>
+
+            <h2>Cómo activar el Token Galicia</h2>
+            <div class="card">
+                <p>1. Ingresá a: App Galicia > Más > Claves > Token Galicia > Activar.</p>
+                <p>2. Seguí los pasos de validación.</p>
+                <p>¡Listo! Ya tenés tu Token Galicia activo.</p>
+            </div>
+        </section>
+
+        <div class="ayuda">
+            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Icono-mensaje.png" alt="chat" />
+            <h3>¿Necesitas ayuda?</h3>
+            <p>Respondemos tus dudas</p>
         </div>
-
-    <h2>Cómo crear tu Usuario y Clave</h2>
-    <div class="card">
-      <p>1. Descargá o abrí la App Galicia.</p>
-      <p>2. Tocá "Ingresar" o "Ya soy Galicia" > Obtener Usuario y Clave Galicia.</p>
-      <p>3. Escribí tu DNI y sacate una foto para verificar tu identidad.</p>
-      <p>4. Ingresá tu celu y validalo con el código que vas a recibir por SMS.</p>
-      <p>5. Creá tu Usuario y Clave Galicia.</p>
-      <p>6. Cargá tu mail, revisá tu bandeja de entrada, confirmalo y ¡listo!</p>
-      <p>👉 Al momento de crearlos, evitá usar números iguales, consecutivos o caracteres especiales.</p>
-    </div>
-
-    <h2>Cómo activar el Token Galicia</h2>
-  <div class="card">
-      <p>1. Ingresá a: App Galicia > Más > Claves > Token Galicia > Activar.</p>
-      <p>2. Seguí los pasos de validación.</p>
-      <p>¡Listo! Ya tenés tu Token Galicia activo.</p>
-    </div>
-</section>
-
-<div class="ayuda">
-    <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Icono-mensaje.png" alt="chat" />
-    <h3>¿Necesitas ayuda?</h3>
-    <p>Respondemos tus dudas</p>
-</div>
-
-
 
     </main>
 
     <footer>
-     
-            <div class="primero">
-                <h4>¡Seguinos en redes!</h4>               
-                <a href="https://www.instagram.com/bancogalicia/" target="_blank"><img src="../img/instagram.png" alt="Logo de instagram" class="contact-item" /></a>
-                <a href="https://www.facebook.com/bancogalicia" target="_blank"><img src="../img/facebook.png" alt="Logo de facebook" class="contact-item" /></a>
 
-            </div>
+        <div class="primero">
+            <h4>¡Seguinos en redes!</h4>
+            <a href="https://www.instagram.com/bancogalicia/" target="_blank"><img src="../img/instagram.png"
+                    alt="Logo de instagram" class="contact-item" /></a>
+            <a href="https://www.facebook.com/bancogalicia" target="_blank"><img src="../img/facebook.png"
+                    alt="Logo de facebook" class="contact-item" /></a>
 
-            <div class="segundo">
-                <h4>Telefonos Utiles</h4>               
-                <p>Fonobanco Galicia: 0810-444-6500 / 0800-888-4254 para<br> todo el país.<br>
-                    También podés contactarnos por WhatsApp, todos los días, las 24 horas.</p>
-            </div>
-            
-            <div class="redes">
-                <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/wsp.png" alt="Logo de Wsp"
-                    class="icono-wsp" /></a>
-              </div>
+        </div>
+
+        <div class="segundo">
+            <h4>Telefonos Utiles</h4>
+            <p>Fonobanco Galicia: 0810-444-6500 / 0800-888-4254 para<br> todo el país.<br> También podés contactarnos por WhatsApp, todos los días, las 24 horas.</p>
+        </div>
+
+        <div class="redes">
+            <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/wsp.png" alt="Logo de Wsp" class="icono-wsp" /></a>
+        </div>
     </footer>
 
     <!--LOS SCRIPTS -->
