--- a/html/tarjetas.html
+++ b/html/tarjetas.html
@@ -48,13 +48,10 @@
 
         <!--primera parte-->
         <nav>
-
             <button class="boton3" onclick= "window.location.href='../index.html';" aria-expanded="false">
-                Inicio
-              </button>
+                Inicio</button>
             <button class="boton3" data-bs-toggle="dropdown" aria-expanded="false">
-            Personas
-          </button>
+            Personas</button>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="clavesytoken.html">Crear claves y token</a></li>
             <li><a class="dropdown-item" href="#">Tarjetas</a></li>
@@ -62,8 +59,7 @@
           </ul>
 
           <button class="boton3"  onclick= "window.location.href='ayuda.html';" aria-expanded="false">
-            Ayuda
-          </button>
+            Ayuda</button>
       </nav>
         <a class="boton1" href="#">Office Banking</a>
         <a class="boton2" href="#">Online Banking</a>
@@ -71,7 +67,6 @@
         <div class="buscador">
             <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
         </div>
-
     </header>
 
 
@@ -143,9 +138,6 @@
     <h3>¿Necesitas ayuda?</h3>
     <p>Respondemos tus dudas</p>
 </div>
-
-
-
     </main>
 
     <footer>
