--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -30,6 +30,9 @@
 
     <link rel="stylesheet" href="../css/style.css" />
 
+      <!--LINK DE ANIMATION-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <!--GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -50,20 +53,19 @@
         <nav>
 
             <button class="boton3" onclick= "window.location.href='../index.html';" aria-expanded="false">
-                Inicio
-              </button>
+                Inicio</button>
+
             <button class="boton3" data-bs-toggle="dropdown" aria-expanded="false">
-            Personas
-          </button>
+                Personas</button>
+
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Crear claves y token</a></li>
+            <li><a class="dropdown-item" href="clavesytoken.html">Crear claves y token</a></li>
             <li><a class="dropdown-item" href="tarjetas.html">Tarjetas</a></li>
             <li><a class="dropdown-item" href="cuentas.html">Cuentas</a></li>
           </ul>
 
           <button class="boton3" onclick= "window.location.href='ayuda.html';" aria-expanded="false">
-            Ayuda
-          </button>
+            Ayuda</button>
       </nav>
         <a class="boton1" href="#">Office Banking</a>
         <a class="boton2" href="#">Online Banking</a>
@@ -71,10 +73,7 @@
         <div class="buscador">
             <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
         </div>
-
-   
     </header>
-
 
     <main>
         <!--TERCER PARTE-->
@@ -226,24 +225,20 @@
                 <h4>¡Seguinos en redes!</h4>               
                 <a href="https://www.instagram.com/bancogalicia/" target="_blank"><img src="../img/instagram.png" alt="Logo de instagram" class="contact-item" /></a>
                 <a href="https://www.facebook.com/bancogalicia" target="_blank"><img src="../img/facebook.png" alt="Logo de facebook" class="contact-item" /></a>
-
             </div>
 
             <div class="segundo">
                 <h4>Telefonos Utiles</h4>               
-                <p>Fonobanco Galicia: 0810-444-6500 / 0800-888-4254 para<br> todo el país.<br>
-                    También podés contactarnos por WhatsApp, todos los días, las 24 horas.</p>
+                <p>Fonobanco Galicia: 0810-444-6500 / 0800-888-4254 para<br> todo el país.<br> También podés contactarnos por WhatsApp, todos los días, las 24 horas.</p>
             </div>
             
             <div class="redes">
-                <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/wsp.png" alt="Logo de Wsp"
-                    class="icono-wsp" /></a>
+                <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/wsp.png" alt="Logo de Wsp" class="icono-wsp" /></a>
               </div>
     </footer>
 
     <!--LOS SCRIPTS -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
 </body>
