--- a/html/cuentas.html
+++ b/html/cuentas.html
@@ -2,181 +2,184 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cuentas</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cuentas</title>
 
-    <!--SEO ON PAGE-->
-    <meta name="description" content="Descubre nuestras cuentas bancarias adaptadas a ti: corrientes, ahorros e inversiones. Administra tu dinero de manera efectiva con nosotros.">
-    <!--META KEYWORDS-->
-    <meta name="keywords" content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, dolar, dinero, tarjetas, cuentas">
-    <!--META PHONE-->
-    <meta name="telephone" content="+543510000000">
-    <!--META WHATSAPP-->
-    <meta name="whatsapp" content="+543510000000">
-    <!--META AUTOR-->
-    <meta name="author" content="Florencia Solano">
-    <!--META GEO-->
-    <meta name="geo.placename" content="Cordoba">
+  <!--SEO ON PAGE-->
+  <meta name="description"
+    content="Descubre nuestras cuentas bancarias adaptadas a ti: corrientes, ahorros e inversiones. Administra tu dinero de manera efectiva con nosotros.">
+  <!--META KEYWORDS-->
+  <meta name="keywords"
+    content="Banco, dinero, transferencia, deposito, cajeros, tramites, cheques, dolar, dinero, tarjetas, cuentas">
+  <!--META PHONE-->
+  <meta name="telephone" content="+543510000000">
+  <!--META WHATSAPP-->
+  <meta name="whatsapp" content="+543510000000">
+  <!--META AUTOR-->
+  <meta name="author" content="Florencia Solano">
+  <!--META GEO-->
+  <meta name="geo.placename" content="Cordoba">
 
-    <!--favicon--> 
-    <link rel="shortcut icon" href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg" type="image/x-icon">
+  <!--favicon-->
+  <link rel="shortcut icon"
+    href="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Galicia-Mobile.jpg/jcr:content/renditions/Galicia-Mobile.jpeg"
+    type="image/x-icon">
 
 
-    <!--LINK DE BOOTRSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!--LINK DE BOOTRSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 
-    <!--GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <!--GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet" />
 
 </head>
 
 <body>
-    <header>
-        <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Logo-TenesGalicia.jpg"
-            alt="logo de la pagina" class="logogalicia" />
+  <header>
+    <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Logo-TenesGalicia.jpg"
+      alt="logo de la pagina" class="logogalicia" />
 
-        <!--primera parte-->
-        <nav>
+    <!--primera parte-->
+    <nav>
 
-            <button class="boton3" onclick= "window.location.href='../index.html';" aria-expanded="false">
-                Inicio
-              </button>
-            <button class="boton3" data-bs-toggle="dropdown" aria-expanded="false">
-            Personas
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="clavesytoken.html">Crear claves y token</a></li>
-            <li><a class="dropdown-item" href="tarjetas.html">Tarjetas</a></li>
-            <li><a class="dropdown-item" href="#">Cuentas</a></li>
-          </ul>
+      <button class="boton3" onclick="window.location.href='../index.html';" aria-expanded="false">
+        Inicio</button>
+      <button class="boton3" data-bs-toggle="dropdown" aria-expanded="false">
+        Personas</button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="clavesytoken.html">Crear claves y token</a></li>
+        <li><a class="dropdown-item" href="tarjetas.html">Tarjetas</a></li>
+        <li><a class="dropdown-item" href="#">Cuentas</a></li>
+      </ul>
 
-          <button class="boton3" onclick= "window.location.href='ayuda.html';" aria-expanded="false">
-            Ayuda
-          </button>
-      </nav>
-        <a class="boton1" href="#">Office Banking</a>
-        <a class="boton2" href="#">Online Banking</a>
+      <button class="boton3" onclick="window.location.href='ayuda.html';" aria-expanded="false">
+        Ayuda</button>
+    </nav>
+    <a class="boton1" href="#">Office Banking</a>
+    <a class="boton2" href="#">Online Banking</a>
 
-        <div class="buscador">
-            <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
-        </div>
+    <div class="buscador">
+      <a href="https://www.google.com/?hl=es" target="_blank"><img src="../img/lupa.png" alt="Logo de lupa" class="lupa" /></a>
+    </div>
+  </header>
+  <main>
+    <!--TERCER PARTE-->
+    <section class="cuerpo">
+      <div class="tituloeimagen">
+        <h1>Abrir tu cuenta Galicia<br>tiene beneficios</h1>
+        <p>Y disfrutá 6 meses gratis y promos para ahorrar 😉</p>
+        <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/todas-las-cuentas/Banner-derivadoraCuentas.jpg"
+          alt="persona con celular" />
+      </div>
 
- 
-    </header>
+      <h2>Encontrá la cuenta ideal para vos</h2>
 
-
-    <main>
-          <!--TERCER PARTE-->
-<section class="cuerpo">
-            <div class="tituloeimagen">
-                <h1>Abrir tu cuenta Galicia<br>tiene beneficios</h1>
-                <p>Y disfrutá 6 meses gratis y promos para ahorrar 😉</p>
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/todas-las-cuentas/Banner-derivadoraCuentas.jpg" alt="persona con celular" />    
-        </div>
-
-        <h2>Encontrá la cuenta ideal para vos</h2>
-
-<div class="contenedorcard">
-          <div class="card">
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-move.jpg"  alt="persona con auriculares">
-            <div class="card-body">
-              <p class="card-title">Move</p>
-              <p>Tarjeta de Débito.<br>
+      <div class="contenedorcard">
+        <div class="card">
+          <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-move.jpg"
+            alt="persona con auriculares">
+          <div class="card-body">
+            <p class="card-title"><strong>Move</strong></p>
+            <p>Tarjeta de Débito.<br>
               Caja de Ahorro.<br>
               Caja de Ahorro en dólares.<br>
               App personalizada.</p>
-              <a href="#" class="boton2">Abrir Cuenta</a>
-            </div>
+            <a href="#" class="boton2">Abrir Cuenta</a>
           </div>
+        </div>
 
-          <div class="card">
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-classic.jpg"  alt="mujer leyendo">
-            <div class="card-body">
-              <p class="card-title">Classic</p>
-              <p>2 tarjetas de crédito internacionales.<br>
-                Tarjeta de Débito.<br>
-                Caja de Ahorro.<br>
-                Caja de Ahorro en dólares opcional.<br>
-                Cuenta Corriente opcional.</p>
-              <a href="#" class="boton2">Abrir Cuenta</a>
-            </div>
+        <div class="card">
+          <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-classic.jpg"
+            alt="mujer leyendo">
+          <div class="card-body">
+            <p class="card-title"><strong>Classic</strong></p>
+            <p>2 tarjetas de crédito internacionales.<br>
+              Tarjeta de Débito.<br>
+              Caja de Ahorro.<br>
+              Caja de Ahorro en dólares opcional.<br>
+              Cuenta Corriente opcional.</p>
+            <a href="#" class="boton2">Abrir Cuenta</a>
           </div>
+        </div>
 
-          <div class="card">
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-prefer.jpg"  alt="mujer con celular">
-            <div class="card-body">
-              <p class="card-title">Prefer</p>
-              <p>2 tarjetas de crédito gold.<br>
-                Tarjeta de Débito.<br>
-                Caja de Ahorro.<br>
-                Caja de Ahorro en dólares opcional.<br>
-                Cuenta Corriente opcional.</p>
-              <a href="#" class="boton2">Abrir Cuenta</a>
-            </div>
+        <div class="card">
+          <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-prefer.jpg"
+            alt="mujer con celular">
+          <div class="card-body">
+            <p class="card-title"><strong>Prefer</strong></p>
+            <p>2 tarjetas de crédito gold.<br>
+              Tarjeta de Débito.<br>
+              Caja de Ahorro.<br>
+              Caja de Ahorro en dólares opcional.<br>
+              Cuenta Corriente opcional.</p>
+            <a href="#" class="boton2">Abrir Cuenta</a>
           </div>
+        </div>
 
-          <div class="card">
-            <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-eminent.jpg"  alt="hombre con neetbook">
-            <div class="card-body">
-              <p class="card-title">Éminent</p>
-              <p>2 tarjetas de crédito. Pueden ser black o platinum según tus ingresos.<br>
-                Tarjeta de Débito.<br>
-                Caja de Ahorro.<br>
-                Caja de Ahorro en dólares opcional.<br>
-                Cuenta Corriente opcional.<br>
-                Atención personalizada.<br>
-                Asistencia en viajes y servicios preferenciales.</p>
-              <a href="#" class="boton2">Abrir Cuenta</a>
-            </div>
+        <div class="card">
+          <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/derivadora/cuenta-eminent.jpg"
+            alt="hombre con neetbook">
+          <div class="card-body">
+            <p class="card-title"><strong>Éminent</strong></p>
+            <p>2 tarjetas de crédito. Pueden ser black o platinum según tus ingresos.<br>
+              Tarjeta de Débito.<br>
+              Caja de Ahorro.<br>
+              Caja de Ahorro en dólares opcional.<br>
+              Cuenta Corriente opcional.<br>
+              Atención personalizada.<br>
+              Asistencia en viajes y servicios preferenciales.</p>
+            <a href="#" class="boton2">Abrir Cuenta</a>
           </div>
-</div>
-</section>
+        </div>
+      </div>
+    </section>
 
-<div class="ayuda">
-    <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Icono-mensaje.png" alt="chat" />
-    <h3>¿Necesitas ayuda?</h3>
-    <p>Respondemos tus dudas</p>
-</div>
+    <div class="ayuda">
+      <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Icono-mensaje.png" alt="chat" />
+      <h3>¿Necesitas ayuda?</h3>
+      <p>Respondemos tus dudas</p>
+    </div>
 
+  </main>
 
+  <footer>
 
-    </main>
+    <div class="primero">
+      <h4>¡Seguinos en redes!</h4>
+      <a href="https://www.instagram.com/bancogalicia/" target="_blank"><img src="../img/instagram.png"
+          alt="Logo de instagram" class="contact-item" /></a>
+      <a href="https://www.facebook.com/bancogalicia" target="_blank"><img src="../img/facebook.png"
+          alt="Logo de facebook" class="contact-item" /></a>
+    </div>
 
-    <footer>
-     
-            <div class="primero">
-                <h4>¡Seguinos en redes!</h4>               
-                <a href="https://www.instagram.com/bancogalicia/" target="_blank"><img src="../img/instagram.png" alt="Logo de instagram" class="contact-item" /></a>
-                <a href="https://www.facebook.com/bancogalicia" target="_blank"><img src="../img/facebook.png" alt="Logo de facebook" class="contact-item" /></a>
+    <div class="segundo">
+      <h4>Telefonos Utiles</h4>
+      <p>Fonobanco Galicia: 0810-444-6500 / 0800-888-4254 para<br> todo el país.<br>
+        También podés contactarnos por WhatsApp, todos los días, las 24 horas.</p>
+    </div>
 
-            </div>
+    <div class="redes">
+      <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/wsp.png" alt="Logo de Wsp"
+          class="icono-wsp" /></a>
+    </div>
+  </footer>
 
-            <div class="segundo">
-                <h4>Telefonos Utiles</h4>               
-                <p>Fonobanco Galicia: 0810-444-6500 / 0800-888-4254 para<br> todo el país.<br>
-                    También podés contactarnos por WhatsApp, todos los días, las 24 horas.</p>
-            </div>
-            
-            <div class="redes">
-                <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/wsp.png" alt="Logo de Wsp"
-                    class="icono-wsp" /></a>
-              </div>
-    </footer>
+  <!--LOS SCRIPTS -->
 
-    <!--LOS SCRIPTS -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
